src/objects/Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount of the opportunity to allocate to this general accounting unit. Leave blank for percent based allocations.</description>
        <inlineHelpText>Amount of the opportunity to allocate to this general accounting unit. Leave blank for percent based allocations.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optionally attributes allocations to a campaign. All new opportunities created with this campaign as primary campaign source will automatically be allocated in the same way.</description>
        <inlineHelpText>Optionally attributes allocations to a campaign. All new opportunities created with this campaign as primary campaign source will automatically be allocated in the same way.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>GAU Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Accounting_Unit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The general accounting unit to attribute this allocation. Only general accounting units marked as active are available for new allocations.</description>
        <inlineHelpText>The general accounting unit to attribute this allocation. Only general accounting units marked as active are available for new allocations.</inlineHelpText>
        <label>General Accounting Unit</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Allocations can only be assigned to active general accounting units. Allocations assigned to inactive general accounting units cannot be modified.</errorMessage>
            <filterItems>
                <field>General_Accounting_Unit__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active general accounting units can be selected.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>General_Accounting_Unit__c</referenceTo>
        <relationshipLabel>GAU Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Attributes allocations to an opportunity. All opportunities in a closed and won stage will be rolled up to this allocation&apos;s general accounting unit.</description>
        <inlineHelpText>Attributes allocations to an opportunity. All opportunities in a closed and won stage will be rolled up to this allocation&apos;s general accounting unit.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>GAU Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <description>Percent of opportunity amount to allocate to this general accounting unit. Modifying an opportunity amount of a percent based allocation will modify the allocation amount.</description>
        <inlineHelpText>Percent of opportunity amount to allocate to this general accounting unit. Modifying an opportunity amount of a percent based allocation will modify the allocation amount.</inlineHelpText>
        <label>Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optionally attributes allocations to a recurring donation. All new opportunities created with this recurring donation schedule will automatically be allocated in the same way.</description>
        <inlineHelpText>Optionally attributes allocations to a recurring donation. All new opportunities created with this recurring donation schedule will automatically be allocated in the same way.</inlineHelpText>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>GAU Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GAU Allocation</label>
    <nameField>
        <displayFormat>ALL-{0}</displayFormat>
        <label>GAU Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GAU Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>